# spheres-and-points

./: .gitmodules  README.md  cabal-ghcjs.project  constructible-v.nix  default.nix
frontend/: frontend.cabal  release.nix
frontend/app/: Main.hs
frontend/src/: CircleDescent.hs  Convenience.hs  GradientDescent.hs  SphereDescent.hs  Spline.hs  ThreeSharedDrawing.hs
modifiedDeps/doctest/: doctest.cabal  doctest.nix
modifiedDeps/doctest/src/Test/: DocTest.hs
