name:                frontend
version:             1.0.0
-- synopsis:            
description:         ghcjs code that made the visualizations on my blog
license:             BSD3
license-file:        LICENSE
author:              Bassel Mabsout
maintainer:          bmabsout@hotmail.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  exposed-modules:   CircleDescent
                     , SphereDescent
  other-modules:     Spline
                     , ThreeSharedDrawing
                     , GradientDescent
  build-depends:     base >= 4.9 && < 4.11
                     , ad
                     , random
                     , mtl
                     , linear
                     , text
                     , ghcjs-three
                     , ghcjs-dom-jsffi
                     , vector
                     , constructible-v
  default-language:  Haskell2010

executable frontend-exe
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N -dedupe
  cpp-options:         -DGHCJS_BROWSER
  build-depends:       base >=4.9 && <4.11
                       , frontend

  hs-source-dirs:      app
  default-language:    Haskell2010

