name:             doctest
version:          0.13.0
synopsis:         Test interactive Haskell examples
description:      The doctest program checks examples in source code comments.
                  It is modeled after doctest for Python
                  (<http://docs.python.org/library/doctest.html>).
                  .
                  Documentation is at
                  <https://github.com/sol/doctest#readme>.
category:         Testing
bug-reports:      https://github.com/sol/doctest/issues
homepage:         https://github.com/sol/doctest#readme
license:          MIT
license-file:     LICENSE
copyright:        (c) 2009-2017 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8

source-repository head
  type: git
  location: https://github.com/sol/doctest

library
  exposed-modules:
      Test.DocTest
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  build-depends:
      base          == 4.*

executable doctest
  main-is:
      Main.hs
  ghc-options:
      -Wall -threaded
  hs-source-dirs:
      driver
  build-depends:
      base          == 4.*
    , doctest
